--- a/app/src/main/res/layout/fragment_bill.xml
+++ b/app/src/main/res/layout/fragment_bill.xml
@@ -7,16 +7,20 @@
     tools:context=".ui.bill.BillFragment">
 
     <TextView
-        android:id="@+id/text_bill"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:id="@+id/textView4"
+        android:layout_width="423dp"
+        android:layout_height="70dp"
+        android:fontFamily="@font/david_libre"
+        android:text="חשבונית"
         android:textAlignment="center"
-        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:textSize="40sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
