--- a/app/src/main/res/layout/product_shop_cart_layout.xml
+++ b/app/src/main/res/layout/product_shop_cart_layout.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/product_id"
+            android:id="@+id/product_id_shop_cart"
             android:layout_width="match_parent"
             android:layout_height="29dp"
             android:fontFamily="@font/david_libre"
@@ -26,10 +26,10 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/product_name"
+            android:id="@+id/product_name_shop_cart"
             android:layout_width="441dp"
             android:layout_height="39dp"
-            android:layout_below="@+id/product_id"
+            android:layout_below="@+id/product_id_shop_cart"
             android:fontFamily="@font/david_libre"
             android:text="שם המוצר"
             android:textAlignment="center"
@@ -38,16 +38,17 @@
             android:textStyle="bold" />
 
         <ImageView
-            android:id="@+id/product_image"
+            android:id="@+id/product_image_shop_cart"
             android:layout_width="match_parent"
             android:layout_height="185dp"
-            android:layout_below="@+id/product_name"></ImageView>
+            android:layout_below="@+id/product_name_shop_cart"></ImageView>
+
 
         <TextView
-            android:id="@+id/product_price"
+            android:id="@+id/product_price_shop_cart"
             android:layout_width="441dp"
             android:layout_height="39dp"
-            android:layout_below="@+id/product_image"
+            android:layout_below="@+id/product_image_shop_cart"
             android:fontFamily="@font/david_libre"
             android:text="מחיר מוצר"
             android:textAlignment="center"
@@ -55,21 +56,49 @@
             android:textSize="20dp"
             android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/button_add_to_shopping_cart"
+        <TextView
+            android:id="@+id/quantity_product"
             android:layout_width="441dp"
             android:layout_height="39dp"
-            android:layout_below="@+id/product_price"
-            android:backgroundTint="#F4C40C"
+            android:layout_below="@+id/product_price_shop_cart"
             android:fontFamily="@font/david_libre"
-            android:text="הוסף לסל"
+            android:text="כמות מוצר"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/button_increase_shopping_cart"
+            android:layout_width="191dp"
+            android:layout_height="36dp"
+            android:layout_below="@+id/quantity_product"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="3dp"
+            android:layout_marginTop="0dp"
+            android:backgroundTint="#37F40C"
+            android:fontFamily="@font/david_libre"
+            android:text="+"
             android:textColor="@color/black"
             android:textStyle="bold" />
 
+        <Button
+            android:id="@+id/button_increase_shopping_cart2"
+            android:layout_width="184dp"
+            android:layout_height="37dp"
+            android:layout_below="@+id/quantity_product"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="0dp"
+            android:backgroundTint="#F40C0C"
+            android:fontFamily="@font/david_libre"
+            android:text="-"
+            android:textColor="@color/black"
+            android:textStyle="bold" />
     </RelativeLayout>
 
 
 
 
 
-    </androidx.cardview.widget.CardView>
+</androidx.cardview.widget.CardView>
