--- a/app/src/main/res/layout/fragment_bill.xml
+++ b/app/src/main/res/layout/fragment_bill.xml
@@ -23,4 +23,31 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
+    <TextView
+        android:id="@+id/totalPrice"
+        android:layout_width="410dp"
+        android:layout_height="58dp"
+        android:fontFamily="@font/david_libre"
+        android:background="#F4C40C"
+        android:text="לתשלום"
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.139" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/mRecyclerView_BillProducts"
+        android:layout_width="395dp"
+        android:layout_height="532dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginBottom="4dp"
+        app:layoutManager="LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
