--- a/app/src/main/res/layout/product_bill.xml
+++ b/app/src/main/res/layout/product_bill.xml
@@ -15,87 +15,61 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/product_id_shopping_cart"
+            android:id="@+id/product_id_bill"
             android:layout_width="match_parent"
             android:layout_height="29dp"
-            android:background="#F4C40C"
             android:fontFamily="@font/david_libre"
             android:text="מספר מוצר"
-            android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="15dp"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/product_name_shopping_cart"
+            android:id="@+id/product_name_bill"
             android:layout_width="441dp"
             android:layout_height="39dp"
-            android:layout_below="@+id/product_id_shopping_cart"
+            android:layout_below="@+id/product_id_bill"
             android:fontFamily="@font/david_libre"
             android:text="שם המוצר"
-            android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="20dp"
             android:textStyle="bold" />
 
-        <ImageView
-            android:id="@+id/product_image_shopping_cart"
-            android:layout_width="match_parent"
-            android:layout_height="185dp"
-            android:layout_below="@+id/product_name_shopping_cart"></ImageView>
-
 
         <TextView
-            android:id="@+id/product_price_shopping_cart"
+            android:id="@+id/product_price_bill"
             android:layout_width="441dp"
             android:layout_height="39dp"
-            android:layout_below="@+id/product_image_shopping_cart"
+            android:layout_below="@+id/product_name_bill"
             android:fontFamily="@font/david_libre"
             android:text="מחיר מוצר"
-            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/product_quantity_bill"
+            android:layout_width="441dp"
+            android:layout_height="39dp"
+            android:layout_below="@+id/product_price_bill"
+            android:fontFamily="@font/david_libre"
+            android:text="כמות מוצר"
             android:textColor="@color/black"
             android:textSize="20dp"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/quantity_product"
+            android:id="@+id/product_sum_bill"
             android:layout_width="441dp"
             android:layout_height="39dp"
-            android:layout_below="@+id/product_price_shopping_cart"
+            android:background="#F4C40C"
+            android:layout_below="@+id/product_quantity_bill"
             android:fontFamily="@font/david_libre"
-            android:text="כמות מוצר"
-            android:textAlignment="center"
+            android:text="סך הכל לתשלום למוצר זה"
             android:textColor="@color/black"
             android:textSize="20dp"
             android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/button_increase_shopping_cart"
-            android:layout_width="170dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/quantity_product"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="3dp"
-            android:layout_marginTop="0dp"
-            android:backgroundTint="#37F40C"
-            android:fontFamily="@font/david_libre"
-            android:text="+"
-            android:textColor="@color/black"
-            android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/button_decrease_shopping_cart"
-            android:layout_width="152dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/quantity_product"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="-1dp"
-            android:layout_marginEnd="11dp"
-            android:backgroundTint="#F40C0C"
-            android:fontFamily="@font/david_libre"
-            android:text="-"
-            android:textColor="@color/black"
-            android:textStyle="bold" />
     </RelativeLayout>
 
 
