--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,31 +9,56 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="423dp"
-        android:layout_height="70dp"
+        android:layout_width="408dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="4dp"
         android:fontFamily="@font/david_libre"
         android:text="רשימת מוצרים"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="40sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        tools:layout_editor_absoluteX="-2dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/mRecyclerView_Products"
-        android:layout_width="383dp"
-        android:layout_height="599dp"
+        android:layout_width="389dp"
+        android:layout_height="498dp"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layoutManager="LinearLayoutManager"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
+    <SearchView
+        android:id="@+id/search_product"
+        android:layout_width="411dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="72dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:fontFamily="@font/david_libre"
+        android:textColorHint="@color/black"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        android:hint="חפש מוצר.."
+        android:drawableLeft="@android:drawable/ic_menu_search"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button_sort_and_filter"
+        android:layout_width="382dp"
+        android:layout_height="54dp"
+        android:layout_below="@+id/search_product"
+        android:layout_marginBottom="512dp"
+        android:backgroundTint="#F4C40C"
+        android:fontFamily="@font/david_libre"
+        android:text="מיין/סנן על פי..."
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
