--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -24,6 +24,12 @@
         tools:layout="@layout/fragment_bill" />
 
     <fragment
+        android:id="@+id/nav_admin"
+        android:name = "com.example.projectkaveretaplication.ui.admin.AdminFragment"
+        android:label="@string/menu_admin"
+        tools:layout="@layout/fragment_admin" />
+
+    <fragment
         android:id="@+id/nav_logout"
         />
 </navigation>
