--- a/app/src/main/res/layout/activity_show_bills_admin.xml
+++ b/app/src/main/res/layout/activity_show_bills_admin.xml
@@ -18,77 +18,21 @@
         android:textColor="@color/black"
         android:textSize="40dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/myTableLayout"
+        app:layout_constraintBottom_toTopOf="@+id/recycler_view_last_bills"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
-    <TableLayout
-        android:id="@+id/myTableLayout"
-        android:layout_width="397dp"
-        android:layout_height="705dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="24dp"
-        android:background="#FFFFFF"
-        android:stretchColumns="*"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view_last_bills"
+        android:layout_width="412dp"
+        android:layout_height="599dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginBottom="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_show_bill">
-
-
-        <TableRow
-            android:id="@+id/tablerow1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/product_user_show_bill"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="#F4C40C"
-                android:fontFamily="@font/david_libre"
-                android:text="שם משתמש"
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textSize="20dp" />
-
-            <TextView
-                android:id="@+id/products_show_bill"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="#F4C40C"
-                android:fontFamily="@font/david_libre"
-                android:text="מוצרים"
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textSize="20dp" />
-
-            <TextView
-                android:id="@+id/product_sum_show_bill"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="#F4C40C"
-                android:fontFamily="@font/david_libre"
-                android:text="סכום "
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textSize="20dp" />
-
-            <TextView
-                android:id="@+id/product_date_show_bill"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="#F4C40C"
-                android:fontFamily="@font/david_libre"
-                android:text="תאריך "
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textSize="20dp" />
-
-
-        </TableRow>
-    </TableLayout>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title_show_bill" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
